[gd_scene load_steps=13 format=2]

[ext_resource path="res://scn/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Player.gd" type="Script" id=2]
[ext_resource path="res://gfx/player.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="Animation" id=2]
resource_name = "attack_down"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 128, 129, 130, 131 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack_left"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 152, 153, 154, 155 ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack_right"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 144, 145, 146, 147 ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack_up"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 136, 137, 138, 139 ]
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=9]
resource_name = "run_up"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[node name="Player" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
max_health = 4

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )
vframes = 32
hframes = 8

[node name="Camera2D" type="Camera2D" parent="." index="2"]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 10.0

[node name="InteractionRange" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionRange" index="0"]
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="4"]
anims/attack_down = SubResource( 2 )
anims/attack_left = SubResource( 3 )
anims/attack_right = SubResource( 4 )
anims/attack_up = SubResource( 5 )
anims/run_down = SubResource( 6 )
anims/run_left = SubResource( 7 )
anims/run_right = SubResource( 8 )
anims/run_up = SubResource( 9 )
[connection signal="body_entered" from="InteractionRange" to="." method="_on_InteractionRange_body_entered"]
[connection signal="body_exited" from="InteractionRange" to="." method="_on_InteractionRange_body_exited"]
